nodejs/nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
  labels:
  namespace:
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: nodejs
    # multiple label selectors are permitted
    # app: web
  type: ClusterIP
