nodejs/nodejs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: nodejs00.kubernetes.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nodejs
          servicePort: 80
