nodejs/nodejs-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs
  namespace:
spec:
  host: nodejs.openshift.noverit.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nodejs
