nodejs/nodejs-template.yaml
kind: Template
apiVersion: template.openshift.io/v1
metadata:
  name: nodejs-web-app
  namespace: openshift
  annotations:
    openshift.io/display-name: NoverIT Nodejs Web App
    description: An example of nodejs web application.
    tags: quickstart,nodejs
    iconClass: icon-nodejs
    openshift.io/long-description: This template defines resources needed to develop
      a NodeJS application, including a build configuration and application deployment
      configuration.  It does not include a database.
    openshift.io/provider-display-name: NoverIT
    openshift.io/documentation-url: https://github.com/kalise/nodejs-web-app.git
    openshift.io/support-url: https://github.com/kalise/nodejs-web-app.git
    template.openshift.io/bindable: 'false'
message: |-
  The following service(s) have been created in your project: ${NAME}.
  labels:
  template: nodejs-web-app
  app: nodejs-web-app
objects:
- kind: Service
  apiVersion: v1
  metadata:
    name: "${NAME}"
    annotations:
      description: Exposes and load balances the application pods
  spec:
    ports:
    - name: web
      port: 8080
      targetPort: 8080
    selector:
      name: "${NAME}"
- kind: Route
  apiVersion: v1
  metadata:
    name: "${NAME}"
  spec:
    host: "${NAME}.${APPLICATION_DOMAIN_NAME}"
    to:
      kind: Service
      name: "${NAME}"
- kind: ImageStream
  apiVersion: v1
  metadata:
    name: "${NAME}"
    annotations:
      description: Keeps track of changes in the application image
- kind: BuildConfig
  apiVersion: v1
  metadata:
    name: "${NAME}"
    annotations:
      description: Defines how to build the application
      template.alpha.openshift.io/wait-for-ready: 'true'
  spec:
    source:
      type: Git
      git:
        uri: "${SOURCE_REPOSITORY_URL}"
        ref: "${SOURCE_REPOSITORY_REF}"
      contextDir: "${CONTEXT_DIR}"
    strategy:
      type: Source
      sourceStrategy:
        from:
          kind: ImageStreamTag
          namespace: "${NAMESPACE}"
          name: nodejs:${NODEJS_VERSION}
    output:
      to:
        kind: ImageStreamTag
        name: "${NAME}:latest"
    triggers:
    - type: ImageChange
    - type: ConfigChange
    postCommit:
      script: npm test
- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    name: "${NAME}"
    annotations:
      description: Defines how to deploy the application server
      template.alpha.openshift.io/wait-for-ready: 'true'
  spec:
    strategy:
      type: Rolling
    triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
        - nodejs-example
        from:
          kind: ImageStreamTag
          name: "${NAME}:latest"
    - type: ConfigChange
    replicas: 3
    selector:
      name: "${NAME}"
    template:
      metadata:
        name: "${NAME}"
        labels:
          name: "${NAME}"
      spec:
        containers:
        - name: nodejs-example
          image: " "
          ports:
          - containerPort: 8080
          readinessProbe:
            timeoutSeconds: 3
            initialDelaySeconds: 3
            httpGet:
              path: "/"
              port: 8080
          livenessProbe:
            timeoutSeconds: 3
            initialDelaySeconds: 30
            httpGet:
              path: "/"
              port: 8080
          resources:
            limits:
              memory: "${MEMORY_LIMIT}"
          env: []
parameters:
- name: NAME
  displayName: Name
  description: The name assigned to all of the frontend objects defined in this template.
  required: true
  value: nodejs-example
- name: NAMESPACE
  displayName: Namespace
  description: The OpenShift Namespace where the ImageStream resides.
  required: true
  value: openshift
- name: NODEJS_VERSION
  displayName: Version of NodeJS Image
  description: Version of NodeJS image to be used (6, 8, 10, or latest).
  value: '10'
  required: true
- name: MEMORY_LIMIT
  displayName: Memory Limit
  description: Maximum amount of memory the container can use.
  required: true
  value: 512Mi
- name: SOURCE_REPOSITORY_URL
  displayName: Git Repository URL
  description: The URL of the repository with your application source code.
  required: true
  value: https://github.com/kalise/nodejs-web-app.git
- name: SOURCE_REPOSITORY_REF
  displayName: Git Reference
  description: Set this to a branch name, tag or other ref of your repository if you
    are not using the default branch.
  required: false
- name: CONTEXT_DIR
  displayName: Context Directory
  description: Set this to the relative path to your project if it is not in the root
    of your repository.
  required: false
- name: APPLICATION_DOMAIN_NAME
  displayName: Application Domain
  description: The exposed domain that will route to the Node.js service. If blank, it will be defaulted.
  value: 'openshift.noverit.com'
  required: false
